bundles/policies/baseline/require-ro-rootfs.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-ro-rootfs
  annotations:
    policies.kyverno.io/title: Require Read-Only Root Filesystem
    policies.kyverno.io/category: Pod Security Standards (Restricted)
    policies.kyverno.io/severity: medium
    policies.kyverno.io/description: >-
      A read-only root filesystem helps enforce an immutable infrastructure strategy.
      This policy requires that containers have a read-only root filesystem.
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: validate-readOnlyRootFilesystem
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - kyverno
      validate:
        message: >-
          Root filesystem must be read-only. Set
          spec.containers[*].securityContext.readOnlyRootFilesystem and
          spec.initContainers[*].securityContext.readOnlyRootFilesystem to true.
        pattern:
          spec:
            containers:
              - securityContext:
                  readOnlyRootFilesystem: true
            =(initContainers):
              - securityContext:
                  readOnlyRootFilesystem: true
